--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,22 @@
+aiohappyeyeballs==2.4.4
+aiohttp==3.11.11
+aiosignal==1.3.2
+anyio==4.8.0
+asyncclick==8.1.8.0
+attrs==24.3.0
+cffi==1.17.1
+cryptography==44.0.0
+frozenlist==1.5.0
+idna==3.10
 iniconfig==2.0.0
+mashumaro==3.15
+multidict==6.1.0
 packaging==24.2
 pluggy==1.5.0
+propcache==0.2.1
+pycparser==2.22
 pytest==8.3.4
+python-kasa==0.9.1
+sniffio==1.3.1
+typing_extensions==4.12.2
+yarl==1.18.3
