--- a/requirements.txt
+++ b/requirements.txt
@@ -2,21 +2,52 @@ aiohappyeyeballs==2.4.4
 aiohttp==3.11.11
 aiosignal==1.3.2
 anyio==4.8.0
+asttokens==3.0.0
 asyncclick==8.1.8.0
 attrs==24.3.0
 cffi==1.17.1
+comm==0.2.2
 cryptography==44.0.0
+debugpy==1.8.11
+decorator==5.1.1
+executing==2.1.0
 frozenlist==1.5.0
 idna==3.10
 iniconfig==2.0.0
+ipykernel==6.29.5
+ipython==8.31.0
+jedi==0.19.2
+jupyter_client==8.6.3
+jupyter_core==5.7.2
 mashumaro==3.15
+matplotlib-inline==0.1.7
 multidict==6.1.0
+nest-asyncio==1.6.0
+numpy==2.2.1
 packaging==24.2
+pandas==2.2.3
+parso==0.8.4
+pexpect==4.9.0
+platformdirs==4.3.6
 pluggy==1.5.0
+prompt_toolkit==3.0.48
 propcache==0.2.1
+psutil==6.1.1
+ptyprocess==0.7.0
+pure_eval==0.2.3
 pycparser==2.22
+Pygments==2.19.1
 pytest==8.3.4
+python-dateutil==2.9.0.post0
 python-kasa==0.9.1
+pytz==2024.2
+pyzmq==26.2.0
+six==1.17.0
 sniffio==1.3.1
+stack-data==0.6.3
+tornado==6.4.2
+traitlets==5.14.3
 typing_extensions==4.12.2
+tzdata==2024.2
+wcwidth==0.2.13
 yarl==1.18.3
