--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,8 @@ pluggy==1.5.0
 propcache==0.2.1
 pycparser==2.22
 pytest==8.3.4
-python-kasa==0.9.1
+#python-kasa==0.9.1
 sniffio==1.3.1
 typing_extensions==4.12.2
 yarl==1.18.3
+PyP100==0.1.2
