--- a/requirements.txt
+++ b/requirements.txt
@@ -7,10 +7,13 @@ asyncclick==8.1.8.0
 attrs==24.3.0
 cffi==1.17.1
 comm==0.2.2
+contourpy==1.3.1
 cryptography==44.0.0
+cycler==0.12.1
 debugpy==1.8.11
 decorator==5.1.1
 executing==2.1.0
+fonttools==4.55.3
 frozenlist==1.5.0
 idna==3.10
 iniconfig==2.0.0
@@ -19,7 +22,9 @@ ipython==8.31.0
 jedi==0.19.2
 jupyter_client==8.6.3
 jupyter_core==5.7.2
+kiwisolver==1.4.8
 mashumaro==3.15
+matplotlib==3.10.0
 matplotlib-inline==0.1.7
 multidict==6.1.0
 nest-asyncio==1.6.0
@@ -28,6 +33,7 @@ packaging==24.2
 pandas==2.2.3
 parso==0.8.4
 pexpect==4.9.0
+pillow==11.1.0
 platformdirs==4.3.6
 pluggy==1.5.0
 prompt_toolkit==3.0.48
@@ -37,6 +43,7 @@ ptyprocess==0.7.0
 pure_eval==0.2.3
 pycparser==2.22
 Pygments==2.19.1
+pyparsing==3.2.1
 pytest==8.3.4
 python-dateutil==2.9.0.post0
 python-kasa==0.9.1
