--- a/.github/workflows/strom-tests.yml
+++ b/.github/workflows/strom-tests.yml
@@ -1,22 +1,16 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
-
 name: Python application
-
 on:
   push:
     branches: [ "main" , "automated-tests" ]
   pull_request:
     branches: [ "main" , "automated-tests" ]
-
 permissions:
   contents: read
-
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v4
     - name: Set up Python 3.10
@@ -25,9 +19,12 @@ jobs:
         python-version: "3.10"
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
+        python -m pip install --upgrade pip setuptools wheel
         pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        # Try direct installation first
+        pip install --no-cache-dir python-kasa==0.10.2
+        # Install remaining requirements
+        if [ -f requirements.txt ]; then pip install -r requirements.txt || pip install --no-deps -r requirements.txt; fi
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
