--- a/.github/workflows/strom-tests.yml
+++ b/.github/workflows/strom-tests.yml
@@ -17,18 +17,26 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.12.8"
+        
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip setuptools wheel
-        pip install flake8 pytest
-        # Install remaining requirements
-        if [ -f requirements.txt ]; then pip install -r requirements.txt || pip install --no-deps -r requirements.txt; fi
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+
+    - name: Set environment variables
+      run: |
+        echo "WEATHER_API_KEY=${{ secrets.WEATHER_API_KEY }}" >> $GITHUB_ENV
+        echo "PRICE_API_KEY=${{ secrets.PRICE_API_KEY }}" >> $GITHUB_ENV
+        echo "EMAIL=${{ secrets.EMAIL }}" >> $GITHUB_ENV
+        echo "PASSWORD=${{ secrets.PASSWORD }}" >> $GITHUB_ENV
+
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+
     - name: Test with pytest
       run: |
         pytest
