--- a/.github/workflows/strom-tests.yml
+++ b/.github/workflows/strom-tests.yml
@@ -1,11 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 name: Python application
-on:
-  push:
-    branches: [ "main" , "automated-tests" ]
-  pull_request:
-    branches: [ "main" , "automated-tests" ]
+on: [push, pull_request]
 permissions:
   contents: read
 jobs:
