--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 beautifulsoup4==4.13.3
 cvxpy==1.6.4
+entsoe-py==0.6.18
 kasa==0.0.3
 matplotlib==3.10.1
 numpy==2.2.4
 pandas==2.2.3
+pytest==8.3.4
 plotly==6.0.1
 python-dotenv==1.1.0
 Requests==2.32.3
